--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meal-plan",
   "version": "1.0.0",
-  "description": "A free web API that helps a user plan their meals based on requirements and sends a proposed schedule to their mail",
+  "description": "A free web API that helps users plan their meals based on requirements and sends a proposed schedule to their mail",
   "main": "app.js",
   "scripts": {
     "dev": "",
