--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Vanessa I. Osuka",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
