--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development nodemon app",
     "start:prod": "cross-env NODE_ENV=production node app",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js .",
+
     "test:server": "cross-env NODE_ENV=test node app"
   },
   "repository": "https://github.com/cannarron/meal-plan",
@@ -18,5 +21,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.6",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
